@@ -20,24 +20,23 @@
 %	multidet and nondet predicates
 %	test tests/benchmarks/*.m
 %	generate optimized tailcalls
+%	RTTI generation
 %	handle foreign code written in Java
+% 	Support for Java in Mmake and mmc --make (except for nested modules)
 %
 % TODO: 
-% 	Support for Java in Mmake and mmc --make
 % 	Fix problem with type names and constructor names that are the same
 % 		(Java does not allow the name of a nested class to be
 % 		the same as its enclosing class)
+%	Support nested modules
+%		(The problem with current code generation scheme for nested
+%		modules is that Java does not allow the name of a class to
+%		be the same as the name of its enclosing package.)
+% 	Support for Java in Mmake and mmc --make, for Mercury code usin
+%		nested modules.
+%	Generate names of classes etc. correctly (mostly same as IL backend)
 %	General code cleanup
 %	handle static ground terms(?)
-%	RTTI: currently we generate RTTI data which compiles,
-%		but which is not actually usable.  The class
-%		hierarchy of the RTTI classes in java/runtime/*.java
-%		needs quite a bit of work.  It is implemented in a way
-%		that mirrors what we do for C, but in C we rely on being
-%		able to coerce between different types that have the same
-%		initial fields (e.g. FA_TypeInfo_Struct and TypeInfo_Struct),
-%		and that doesn't work in Java.
-%	generate names of classes etc. correctly (mostly same as IL backend)
 %	support foreign_import_module for Java
 %	handle foreign code written in C 
 %
