@@ -42,6 +42,7 @@ Changes to the Mercury debugger:
 
 Changes to the compiler back-ends:
 * The .NET CLR back-end now bootstraps.
+* Major improvements to the Java back-end.
 
 Numerous minor improvements to the Mercury standard library.
 
@@ -288,6 +289,12 @@ Changes to the compiler back-ends:
   standard library.  As well as being able to bootstrap in grade `il',
   we also now pass more than 90% of the applicable tests in the
   Mercury test suite.  See README.DotNet for details.
+
+* Major improvements to the Java back-end.
+
+  The Java back-end is now enabled by default.  We've fixed a lot of
+  bugs, and implemented a lot more of the Mercury standard library.
+  See README.Java for details.
 
 NEWS for Mercury 0.11
 ---------------------
